# dynamic-amm-sdk

./: Cargo.toml
common/: Cargo.toml
dynamic-amm-quote/: Cargo.toml
dynamic-amm-quote/src/depeg/: spl_stake.rs
programs/dynamic-amm/: Cargo.toml
rust-client/: Cargo.toml
