[package]
name = "dynamic-amm-quote"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_amm_quote"

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
prog_dynamic_amm = { path = "../programs/dynamic-amm", package = "dynamic-amm" }
prog_dynamic_vault = { path = "../programs/dynamic-vault", package = "dynamic-vault" }
anyhow = "1.0.57"
spl-token-swap = { git = "https://github.com/solana-labs/solana-program-library" }
marinade-sdk = { git = "https://github.com/MeteoraAg/marinade-sdk", features = [
    "cpi",
], branch = "solana-program@2.1.0" }
spl-stake-pool = { git = "https://github.com/solana-labs/solana-program-library/", features = [
    "no-entrypoint",
], rev = "5afaf6f5c85700277a54584d85ef737fda0a8903" }
meteora-stable-swap-math = { git = "https://github.com/SharksT/stable-swap/", branch = "bump-solana-program-2.1.0", package = "stable-swap-math" }
meteora-stable-swap-client = { git = "https://github.com/SharksT/stable-swap/", branch = "bump-solana-program-2.1.0", package = "stable-swap-client" }
solana-program = "=2.1.0"

[dev-dependencies]
solana-program-test = "2.1.0"
anchor-client = "0.31.1"
solana-sdk = "2.1.0"
bincode = "1.3.3"
